<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.huchenxuan.alllinkbusiness.activity.RegisterActivity">

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/wellcome_to_alllink"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/inputPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:hint="@string/input_phone_number"
        android:textSize="13sp"
        android:inputType="phone"
        android:drawableStart="@mipmap/user"
        android:drawablePadding="10dp"/>

    <Button
        android:id="@+id/btnGetVerifyCode"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/get_verification_code"
        android:layout_alignBottom="@id/inputPhoneNumber"
        android:layout_alignEnd="@id/inputPhoneNumber"
        android:layout_alignTop="@id/inputPhoneNumber"
        android:layout_marginBottom="7dp"
        android:layout_marginStart="14dp"/>

    <EditText
        android:id="@+id/inputVerificationCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/inputPhoneNumber"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:inputType="text"
        android:hint="@string/input_verification_code"
        android:drawableStart="@mipmap/verification"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/inputVerificationCode"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:hint="@string/input_password"
        android:inputType="textPassword"
        android:drawableStart="@mipmap/password1"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/inputVerifyPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/inputPassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="10dp"
        android:paddingEnd="0dp"
        android:hint="@string/verify_password"
        android:inputType="textPassword"
        android:drawableStart="@mipmap/password1"
        android:drawablePadding="10dp"/>
    
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputVerifyPassword"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/register"/>

</RelativeLayout>
